--- a/excel_tool/Text_Compare/diff_temp.html
+++ b/excel_tool/Text_Compare/diff_temp.html
@@ -1,161 +1,149 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>{{TITLE}}</title>
+  <meta charset="utf-8">
+  <title>Text Compare Result</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background: #1e1e1e;
-      color: #ddd;
+    :root {
+      --bg: #1e1e1e;
+      --bg2:#2b2b2b;
+      --fg: #ddd;
+      --accent:#007acc;
+      --btn:#444;
+      --line: #333;
     }
-    header {
-      background: #333;
-      padding: 10px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
+    html, body { height: 100%; }
+    body {
+      margin: 0;
+      background: var(--bg);
+      color: var(--fg);
+      font-family: Consolas, "Courier New", monospace;
+      overflow: hidden; /* keep one-screen layout */
+    }
+    .toolbar {
       position: sticky;
       top: 0;
       z-index: 100;
-    }
-    header h1 {
-      font-size: 16px;
-      margin: 0;
-      color: #fff;
-    }
-    .buttons {
+      background: var(--bg2);
+      padding: 8px 12px;
       display: flex;
-      gap: 8px;
+      align-items: center;
+      justify-content: space-between;
+      border-bottom: 1px solid var(--line);
     }
-    button {
-      padding: 5px 12px;
-      border: none;
-      border-radius: 5px;
-      background: #444;
+    .toolbar .buttons button {
+      background: var(--btn);
       color: #fff;
+      border: 0;
+      border-radius: 6px;
+      padding: 6px 12px;
+      margin-right: 8px;
       cursor: pointer;
     }
-    button.active {
-      background: #0078d4;
-    }
-    .diff-wrapper {
+    .toolbar .buttons button.active { background: var(--accent); }
+    .labels { opacity: 0.8; }
+
+    .container {
       display: flex;
-      height: calc(100vh - 60px);
+      height: calc(100vh - 50px); /* rest of the screen */
     }
-    .diff-col {
-      flex: 1;
-      overflow: auto;
-      border-right: 1px solid #555;
+    .panel {
+      flex: 1 1 50%;
+      overflow: auto;           /* its own scroll bar */
+      border-right: 1px solid var(--line);
+      padding: 8px;
+      box-sizing: border-box;
     }
-    .diff-col:last-child {
-      border-right: none;
-    }
-    table.diff {
-      width: 100%;
-      border-collapse: collapse;
-      font-size: 12px;
-    }
-    .diff td {
-      padding: 2px 5px;
+    .panel.right { border-right: 0; }
+
+    h3 { margin: 8px 0 12px; font-weight: 600; font-size: 14px; }
+
+    /* HtmlDiff table baseline */
+    table.diff { border-collapse: collapse; width: 100%; table-layout: fixed; }
+    table.diff td, table.diff th {
+      border: 1px solid var(--line);
+      padding: 2px 6px;
       vertical-align: top;
       white-space: pre;
-      font-family: Consolas, monospace;
+      word-wrap: break-word;
     }
-    .diff .diff_header {
-      background: #333;
-      color: #fff;
-      text-align: left;
-      font-weight: bold;
-    }
-    .diff .diff_next {
-      background: #444;
-    }
-    .diff .diff_add {
-      background: #144d14;
-      color: #cfc;
-    }
-    .diff .diff_chg {
-      background: #664400;
-      color: #ff8;
-    }
-    .diff .diff_sub {
-      background: #661111;
-      color: #fcc;
-    }
-    footer {
-      padding: 10px;
-      background: #222;
-      color: #aaa;
-      font-size: 12px;
-      text-align: center;
-    }
+    .diff_add { background: #0f2f0f; color: #b8f6b8; }
+    .diff_sub { background: #3a0d0d; color: #ffb3c1; }
+    .diff_chg { background: #2b1a49; color: #e6d9ff; }
+
+    /* Hide columns using nth-child (HtmlDiff columns order):
+       1=marker, 2=left line#, 3=left text, 4=right line#, 5=right text */
+    .panel.left  table.diff th:nth-child(4),
+    .panel.left  table.diff th:nth-child(5),
+    .panel.left  table.diff td:nth-child(4),
+    .panel.left  table.diff td:nth-child(5) { display: none; }
+
+    .panel.right table.diff th:nth-child(1),
+    .panel.right table.diff th:nth-child(2),
+    .panel.right table.diff td:nth-child(1),
+    .panel.right table.diff td:nth-child(2) { display: none; }
+
+    /* Also hide the left text column in right panel and the right text in left panel */
+    .panel.right table.diff th:nth-child(3),
+    .panel.right table.diff td:nth-child(3) { display: none; }
+    .panel.left  table.diff th:nth-child(3) { } /* keep left text visible */
   </style>
 </head>
 <body>
 
-<header>
-  <h1>Diff Report: {{LEFT_LABEL}} vs {{RIGHT_LABEL}}</h1>
-  <div class="buttons">
-    <button id="btnAll" class="active">All</button>
-    <button id="btnDiff">Differences</button>
-    <button id="btnSame">Same</button>
+  <!-- TOP TOOLBAR -->
+  <div class="toolbar">
+    <div class="buttons">
+      <button id="btnAll" class="active">All</button>
+      <button id="btnDiff">Differences</button>
+      <button id="btnSame">Same</button>
+    </div>
+    <div class="labels">Left: {{LEFT_LABEL}} | Right: {{RIGHT_LABEL}}</div>
   </div>
-</header>
 
-<div class="diff-wrapper">
-  <div class="diff-col" id="leftCol">
-    {{DIFF_TABLE}}
+  <!-- TWO INDEPENDENT SCROLLABLE PANELS -->
+  <div class="container">
+    <div class="panel left">
+      <h3>{{LEFT_LABEL}}</h3>
+      {{FILE1_CONTENT}}
+    </div>
+    <div class="panel right">
+      <h3>{{RIGHT_LABEL}}</h3>
+      {{FILE2_CONTENT}}
+    </div>
   </div>
-</div>
 
-<footer>
-  Left: {{LEFT_LABEL}} | Right: {{RIGHT_LABEL}}
-</footer>
+  <script>
+    // Simple toggle: show all / only changed / only same
+    const buttons = {
+      all:  document.getElementById('btnAll'),
+      diff: document.getElementById('btnDiff'),
+      same: document.getElementById('btnSame')
+    };
 
-<script>
-  const btnAll = document.getElementById("btnAll");
-  const btnDiff = document.getElementById("btnDiff");
-  const btnSame = document.getElementById("btnSame");
-  const table = document.querySelector(".diff");
-
-  function setMode(mode) {
-    btnAll.classList.remove("active");
-    btnDiff.classList.remove("active");
-    btnSame.classList.remove("active");
-
-    if (mode === "all") {
-      btnAll.classList.add("active");
-      [...table.querySelectorAll("tr")].forEach(tr => tr.style.display = "");
+    function setActive(btn){
+      [buttons.all, buttons.diff, buttons.same].forEach(b => b.classList.remove('active'));
+      btn.classList.add('active');
     }
-    else if (mode === "diff") {
-      btnDiff.classList.add("active");
-      [...table.querySelectorAll("tr")].forEach(tr => {
-        if (tr.querySelector(".diff_add,.diff_chg,.diff_sub")) {
-          tr.style.display = "";
+
+    function applyFilter(mode){
+      document.querySelectorAll('table.diff tr').forEach(tr => {
+        // look for diff class flags on the row
+        const c = tr.className || '';
+        const isChange = /diff_(add|chg|sub)/.test(c);
+        if (mode === 'diff') {
+          tr.style.display = isChange ? '' : 'none';
+        } else if (mode === 'same') {
+          tr.style.display = isChange ? 'none' : '';
         } else {
-          tr.style.display = "none";
+          tr.style.display = '';
         }
       });
     }
-    else if (mode === "same") {
-      btnSame.classList.add("active");
-      [...table.querySelectorAll("tr")].forEach(tr => {
-        if (!tr.querySelector(".diff_add,.diff_chg,.diff_sub")) {
-          tr.style.display = "";
-        } else {
-          tr.style.display = "none";
-        }
-      });
-    }
-  }
 
-  btnAll.onclick = () => setMode("all");
-  btnDiff.onclick = () => setMode("diff");
-  btnSame.onclick = () => setMode("same");
-</script>
-
+    buttons.all.addEventListener('click',  () => { setActive(buttons.all);  applyFilter('all');  });
+    buttons.diff.addEventListener('click', () => { setActive(buttons.diff); applyFilter('diff'); });
+    buttons.same.addEventListener('click', () => { setActive(buttons.same); applyFilter('same'); });
+  </script>
 </body>
 </html>
