--- a/excel_tool/Text_Compare/diff_temp.html
+++ b/excel_tool/Text_Compare/diff_temp.html
@@ -1,67 +1,110 @@
-from pathlib import Path
-import difflib
-import datetime
-
-def _read_lines(p: Path):
-    with p.open("r", encoding="utf-8", errors="replace") as fh:
-        return fh.read().splitlines()
-
-def _load_template(template_path: str) -> str:
-    return Path(template_path).read_text(encoding="utf-8")
-
-def _fill_template(tpl: str, *, table_html: str, left_label: str, right_label: str) -> str:
-    # We inject the SAME full table into both panels; CSS in the template
-    # will hide left/right columns in each panel.
-    return (
-        tpl.replace("{{LEFT_LABEL}}", left_label)
-           .replace("{{RIGHT_LABEL}}", right_label)
-           .replace("{{FILE1_CONTENT}}", table_html)
-           .replace("{{FILE2_CONTENT}}", table_html)
-    )
-
-def compare_text_files(file1: str, file2: str, project_path: str, template_file: str) -> tuple[str, str]:
-    """
-    Build a side-by-side HTML diff with a top toolbar and two independent
-    scrollable panels (left/right). Returns (html_output_path, unified_diff_text).
-    """
-    now = datetime.datetime.now().strftime("%Y%m%d_%H%M%S_%f")
-    f1 = Path(file1)
-    f2 = Path(file2)
-    out_dir = Path(project_path)
-    out_dir.mkdir(parents=True, exist_ok=True)
-
-    # Read
-    a_lines = _read_lines(f1)
-    b_lines = _read_lines(f2)
-
-    # Labels
-    left_label  = f1.name
-    right_label = f2.name
-
-    # One HtmlDiff table (we'll place it twice; CSS will hide columns)
-    html_maker = difflib.HtmlDiff(wrapcolumn=120)
-    table_html = html_maker.make_table(
-        a_lines, b_lines,
-        fromdesc=left_label, todesc=right_label,
-        context=False, numlines=0
-    )
-
-    # Load + fill template
-    tpl = _load_template(template_file)
-    final_html = _fill_template(
-        tpl,
-        table_html=table_html,
-        left_label=left_label,
-        right_label=right_label
-    )
-
-    # Write HTML
-    html_name = f"text_compare_result_{now}.html"
-    html_path = out_dir / html_name
-    html_path.write_text(final_html, encoding="utf-8")
-
-    # Optional unified diff text (useful for logs)
-    udiff = "\n".join(
-        difflib.unified_diff(a_lines, b_lines, fromfile=str(f1), tofile=str(f2), lineterm="")
-    )
-    return str(html_path), udiff
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>Text Compare Result</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-color: #1e1e1e;
+      color: #d4d4d4;
+    }
+    .toolbar {
+      background-color: #333;
+      padding: 10px;
+      text-align: center;
+      position: sticky;
+      top: 0;
+      z-index: 100;
+    }
+    .toolbar button {
+      margin: 0 10px;
+      padding: 8px 15px;
+      font-size: 14px;
+      cursor: pointer;
+      border: none;
+      border-radius: 4px;
+      background-color: #555;
+      color: #fff;
+    }
+    .toolbar button:hover {
+      background-color: #777;
+    }
+    .container {
+      display: flex;
+      height: calc(100vh - 50px); /* Full height minus toolbar */
+    }
+    .panel {
+      flex: 1;
+      padding: 10px;
+      overflow-y: auto;
+      border-right: 1px solid #444;
+      box-sizing: border-box;
+    }
+    .panel:last-child {
+      border-right: none;
+    }
+    pre {
+      white-space: pre-wrap;
+      word-wrap: break-word;
+      background: #252526;
+      padding: 10px;
+      border-radius: 4px;
+      max-height: 100%;
+    }
+    .diff-added {
+      background-color: #144d14;
+    }
+    .diff-removed {
+      background-color: #5a1a1a;
+    }
+    .diff-same {
+      background-color: transparent;
+    }
+  </style>
+  <script>
+    function showFilter(mode) {
+      let allLines = document.querySelectorAll(".line");
+      allLines.forEach(line => {
+        if (mode === 'all') {
+          line.style.display = "block";
+        } else if (mode === 'diff') {
+          if (line.classList.contains("diff-same")) {
+            line.style.display = "none";
+          } else {
+            line.style.display = "block";
+          }
+        } else if (mode === 'same') {
+          if (line.classList.contains("diff-same")) {
+            line.style.display = "block";
+          } else {
+            line.style.display = "none";
+          }
+        }
+      });
+    }
+  </script>
+</head>
+<body>
+  <div class="toolbar">
+    <button onclick="showFilter('all')">Show All</button>
+    <button onclick="showFilter('diff')">Show Only Differences</button>
+    <button onclick="showFilter('same')">Show Only Same</button>
+  </div>
+  <div class="container">
+    <div class="panel">
+      <h3>File 1</h3>
+      <pre id="file1-content">
+        <!-- Your File 1 lines will go here dynamically -->
+      </pre>
+    </div>
+    <div class="panel">
+      <h3>File 2</h3>
+      <pre id="file2-content">
+        <!-- Your File 2 lines will go here dynamically -->
+      </pre>
+    </div>
+  </div>
+</body>
+</html>
