--- a/excel_tool/Text_Compare/diff_temp.html
+++ b/excel_tool/Text_Compare/diff_temp.html
@@ -2,183 +2,78 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>{{TITLE}}</title>
+  <title>Text Compare Result</title>
   <style>
-    :root { --toolbar-h: 52px; --gap: 10px; --panel-pad: 8px; }
-    * { box-sizing: border-box; }
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: #1e1e1e;
-      color: #d4d4d4;
+      background-color: #1e1e1e;
+      color: #ddd;
     }
-
-    /* ===== Toolbar (top) ===== */
     .toolbar {
-      position: sticky; top: 0; z-index: 1000;
-      background: #333;
+      background-color: #333;
       padding: 10px;
-      border-bottom: 1px solid #444;
-      display: flex; justify-content: center; gap: 10px;
+      text-align: center;
+      position: sticky;
+      top: 0;
+      z-index: 100;
     }
     .toolbar button {
-      border: 1px solid #666;
-      background: #222;
-      color: #eee;
-      padding: 6px 10px;
-      border-radius: 6px;
+      margin: 0 5px;
+      padding: 5px 12px;
       cursor: pointer;
-      font-weight: 600;
+      border: none;
+      border-radius: 3px;
+      background: #555;
+      color: white;
     }
-    .toolbar button.active { background: #0b5ed7; border-color: #0b5ed7; }
-
-    /* ===== Page layout ===== */
-    .page {
-      display: flex;
-      gap: var(--gap);
-      padding: var(--gap);
-      height: calc(100vh - var(--toolbar-h));
-    }
+    .toolbar button.active { background: #007acc; }
+    .container { display: flex; height: calc(100vh - 50px); }
     .panel {
-      flex: 1 1 50%;
-      display: flex;
-      flex-direction: column;
-      min-width: 0;
-      background: #252526;
-      border: 1px solid #3a3a3a;
-      border-radius: 8px;
-      overflow: hidden;
-    }
-    .panel .head {
-      padding: 8px 12px;
-      background: #2d2d2d;
-      border-bottom: 1px solid #3a3a3a;
-      font-weight: 700;
-    }
-    .panel .scroller {
-      padding: var(--panel-pad);
+      flex: 1;
       overflow: auto;
-      height: 100%;
+      padding: 10px;
+      border-right: 1px solid #444;
+      white-space: pre-wrap;
+      font-family: monospace;
+      line-height: 1.4em;
     }
-
-    /* ===== Make difflib output behave nicely ===== */
-    table.diff { width: 100%; border-collapse: collapse; table-layout: fixed; }
-    table.diff td, table.diff th {
-      border: 1px solid #3a3a3a;
-      padding: 2px 6px;
-      vertical-align: top;
-      white-space: pre;
-      overflow-wrap: anywhere;
+    .panel:last-child { border-right: none; }
+    .same { color: #aaa; }
+    .add  { background: #003300; color: #66ff66; }
+    .del  { background: #330000; color: #ff6666; }
+    .chg  { background: #333300; color: #ffff66; }
+    .line-num {
+      color: #888;
+      display: inline-block;
+      width: 50px;
+      text-align: right;
+      margin-right: 10px;
     }
-    table.diff th { background: #1f1f1f; color: #cfcfcf; }
-
-    /* line number columns (first 2), hide them to maximize width */
-    table.diff th:nth-child(1), table.diff td:nth-child(1),
-    table.diff th:nth-child(2), table.diff td:nth-child(2) { display: none; }
-
-    /* highlight colors close to VSCode theme */
-    .diff_add { background: #09310c; }
-    .diff_chg { background: #2a2a0f; }
-    .diff_sub { background: #3a0e12; }
-    .diff_next { background: #2b2b2b; }
-
-    /* Filter helpers toggled by JS */
-    tr.has-diff { display: table-row; }
-    tr.no-diff  { display: table-row; }
-    .mode-diff tr.no-diff  { display: none; }
-    .mode-same tr.has-diff { display: none; }
-
-    /* keep left/right tables visually consistent */
-    .panel.left  table.diff { background: #252526; }
-    .panel.right table.diff { background: #252526; }
   </style>
 </head>
 <body>
-
-  <!-- ===== TOP TOOLBAR ===== -->
-  <div class="toolbar" id="topbar">
-    <button id="btnAll"  class="active">Show All</button>
-    <button id="btnDiff">Show Only Differences</button>
-    <button id="btnSame">Show Only Same</button>
+  <div class="toolbar">
+    <button onclick="filter('all')" class="active">Show All</button>
+    <button onclick="filter('diff')">Show Only Differences</button>
+    <button onclick="filter('same')">Show Only Same</button>
   </div>
-
-  <!-- ===== PANELS ===== -->
-  <div class="page" id="page">
-    <div class="panel left" id="leftPanel">
-      <div class="head">File 1 — {{LEFT_LABEL}}</div>
-      <div class="scroller" id="leftScroll">
-        {{LEFT_TABLE}}
-      </div>
-    </div>
-
-    <div class="panel right" id="rightPanel">
-      <div class="head">File 2 — {{RIGHT_LABEL}}</div>
-      <div class="scroller" id="rightScroll">
-        {{RIGHT_TABLE}}
-      </div>
-    </div>
+  <div class="container">
+    <div class="panel" id="leftPanel">{{LEFT}}</div>
+    <div class="panel" id="rightPanel">{{RIGHT}}</div>
   </div>
 
   <script>
-    // Mark each table row as has-diff or no-diff by scanning for diff_* cells
-    function classifyRows(root) {
-      const tables = root.querySelectorAll('table.diff');
-      tables.forEach(tbl => {
-        tbl.querySelectorAll('tr').forEach(tr => {
-          const hasDiff = tr.querySelector('.diff_add, .diff_chg, .diff_sub') !== null;
-          tr.classList.toggle('has-diff', hasDiff);
-          tr.classList.toggle('no-diff', !hasDiff);
-        });
+    function filter(mode) {
+      document.querySelectorAll('.same').forEach(el => {
+        el.style.display = (mode === 'same' || mode === 'all') ? '' : 'none';
       });
-    }
-
-    // Apply mode: 'all' | 'diff' | 'same' to both panels
-    function setMode(mode) {
-      const page = document.getElementById('page');
-      page.classList.remove('mode-diff', 'mode-same');
-      // reset active buttons
+      document.querySelectorAll('.add,.del,.chg').forEach(el => {
+        el.style.display = (mode === 'diff' || mode === 'all') ? '' : 'none';
+      });
       document.querySelectorAll('.toolbar button').forEach(b => b.classList.remove('active'));
-
-      if (mode === 'diff') {
-        page.classList.add('mode-diff');
-        document.getElementById('btnDiff').classList.add('active');
-      } else if (mode === 'same') {
-        page.classList.add('mode-same');
-        document.getElementById('btnSame').classList.add('active');
-      } else {
-        document.getElementById('btnAll').classList.add('active');
-      }
+      event.target.classList.add('active');
     }
-
-    // Sync vertical scrolling between the two panes (basic)
-    function syncScroll(a, b) {
-      let lock = false;
-      const handler = (src, dst) => () => {
-        if (lock) return;
-        lock = true;
-        const ratio = src.scrollTop / (src.scrollHeight - src.clientHeight || 1);
-        dst.scrollTop = ratio * (dst.scrollHeight - dst.clientHeight);
-        lock = false;
-      };
-      a.addEventListener('scroll', handler(a, b));
-      b.addEventListener('scroll', handler(b, a));
-    }
-
-    // Init when DOM is ready
-    (function init() {
-      classifyRows(document);
-      setMode('all');
-
-      // Buttons
-      document.getElementById('btnAll').addEventListener('click', () => setMode('all'));
-      document.getElementById('btnDiff').addEventListener('click', () => setMode('diff'));
-      document.getElementById('btnSame').addEventListener('click', () => setMode('same'));
-
-      // Optional synced scroll (remove if you prefer independent)
-      const l = document.getElementById('leftScroll');
-      const r = document.getElementById('rightScroll');
-      syncScroll(l, r);
-    })();
   </script>
 </body>
 </html>
