--- a/tools/text_compare/templet.html
+++ b/tools/text_compare/templet.html
@@ -6,47 +6,68 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <style>
 :root{
-  --grid:#e5e7eb; --zebra:#fafafa; --header:#f6f8fa;
-  --diff:#ffd7d7;
-  --mono: 13px/1.45 Menlo, Consolas, "SFMono-Regular", "DejaVu Sans Mono", monospace;
+  --grid:#e5e7eb; --zebra:#fafafa; --header:#f6f8fa; --diff:#ffd7d7;
+  --mono: 13px/1.35 Menlo, Consolas, "SFMono-Regular", "DejaVu Sans Mono", monospace;
+  --ui: 12px/1.1 system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
 }
-html,body{height:100%;margin:0;background:#fff;color:#111;}
-h3{margin:10px 14px;font:600 14px/1.2 system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;}
+
+/* Lock the page to a single screen */
+html, body { height: 100%; margin: 0; }
+body { overflow: hidden; background:#fff; color:#111; }
+
+/* Fixed topbar so the rest can be an exact viewport-scroller */
+.topbar{
+  position: fixed; inset: 0 0 auto 0; height: 44px;
+  display: flex; align-items: center; gap: 10px;
+  padding: 0 12px; border-bottom: 1px solid var(--grid);
+  background: #fff; z-index: 5; font: var(--ui);
+}
+.topbar h3{ margin: 0; font: 600 14px/1.1 system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif; }
+
+/* The ONLY scroll area: fills the space below the topbar */
 .viewer{
-  height:calc(100vh - 50px);
-  margin: 0 12px 12px;
-  border:1px solid var(--grid);
-  border-radius:6px;
-  overflow:auto;                 /* one unified scroll area */
-  background:#fff;
+  position: fixed; inset: 44px 12px 12px 12px;  /* top,right,bottom,left */
+  border: 1px solid var(--grid); border-radius: 6px;
+  overflow: auto; background: #fff;
 }
-table{
-  border-collapse:separate;
-  border-spacing:0;
-  width:max-content;             /* expand to content; container scrolls */
-  min-width:100%;
-}
-th,td{border:1px solid var(--grid);vertical-align:top;}
+
+/* Table & cells */
+table{ border-collapse: separate; border-spacing: 0; width: max-content; min-width: 100%; }
+th, td{ border: 1px solid var(--grid); vertical-align: top; }
 thead th{
-  position:sticky;top:0;z-index:2;background:var(--header);
-  padding:8px 10px;text-align:left;
-  font:600 12px/1.2 system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
+  position: sticky; top: 0; z-index: 2;
+  background: var(--header); text-align: left; padding: 6px 8px;
+  font: 600 12px/1.1 system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
 }
+
+/* Line numbers */
 .col-num{
-  width:64px;min-width:64px;text-align:right;
-  background:#f5f5f5;color:#555;font:var(--mono);padding:6px 8px;
+  width: 64px; min-width: 64px; text-align: right;
+  background: #f5f5f5; color: #555; padding: 4px 8px;
+  font: var(--mono);
 }
-td > pre{margin:0;padding:6px 10px;font:var(--mono);white-space:pre;}
-td.diff{background:var(--diff);}
-tbody tr:nth-child(even) td{background:var(--zebra);}
+
+/* Code cells: compact, no wrapping; horizontal scroll is on .viewer */
+td > pre{ margin: 0; padding: 4px 10px; font: var(--mono); white-space: pre; }
+
+/* Diff styling + zebra rows */
+td.diff{ background: var(--diff); }
+tbody tr:nth-child(even) td{ background: var(--zebra); }
+
+/* Small screens: slightly tighter numbers/padding */
 @media (max-width: 900px){
-  .col-num{width:52px;min-width:52px}
-  td > pre{padding:6px 8px}
+  .col-num{ width: 52px; min-width: 52px; padding: 3px 6px; }
+  td > pre{ padding: 3px 8px; }
 }
 </style>
 </head>
 <body>
-<h3>Text Compare – {{VIEW}} view</h3>
+
+<div class="topbar">
+  <h3>Text Compare – {{VIEW}} view</h3>
+  <span style="color:#6b7280;">(Left: {{LEFT_HEADER}} · Right: {{RIGHT_HEADER}})</span>
+</div>
+
 <div class="viewer">
   <table>
     <thead>
@@ -60,5 +81,6 @@ tbody tr:nth-child(even) td{background:var(--zebra);}
     </tbody>
   </table>
 </div>
+
 </body>
 </html>
